Fix authority comparator